# cares_service

./: .gitignore  CMakeLists.txt
include/cares_service/: cares.hxx
include/cares_service/detail/: channel.hxx  endpoint_sequence.hxx  error.hxx  io_object.hxx  resolve_mode.hxx  service.hxx
